# mipt_algo_3term

./: README.md  contest3_A.cpp  contest3_B.cpp  contest3_C.cpp  contest3_D.cpp  contest3_E.cpp  task_B.cpp
FFT/: CMakeLists.txt  main.cpp  readme.md
FFT/include/: fft.h  wav.h
FFT/src/: CMakeLists.txt  fft.cpp  wav.cpp
contest4/: taskC.cpp
task_A/: main.cpp  task_A.cpp
task_C/: task_C.cpp
task_D/: task_D.cpp
task_E/: task_E.cpp
task_F/: task_F.cpp
